--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1,3 +1,9 @@
 app_default:
     resource: '@AppBundle/Resources/config/routing/default.yml'
     prefix: /
+app_post:
+    resource: '@AppBundle/Resources/config/routing/post.yml'
+    prefix: /post
+app_blog:
+    resource: '@AppBundle/Resources/config/routing/blog.yml'
+    prefix: /blog
